# dyninst

./: CHANGES_TUMSTAR.txt  CMakeLists.txt
cmake/: cap_arch_def.cmake  options.cmake  packages.cmake  shared.cmake
cmake/Modules/: FindLibElf.cmake
common/: CMakeLists.txt
common/h/: SymReader.h  dyn_regs.h
common/src/: DyninstTypes.C  MappedFile.h  TimeStamp.C  TimeStamp.h  addrRange.h  addrtranslate.h  arch-aarch64.C  arch-aarch64.h  arch-power.C  arch-power.h  arch-x86.C  arch-x86.h  debugOstream.h  fraction.h  headers.h  int64iostream.h  linuxKludges.C  ntHeaders.h  parseauxv.h  serialize-bin.C  serialize.h  sha1.C  timing.C  timing.h  vectorSet.h  wtxKludges.C  wtxKludges.h
dataflowAPI/h/: stackanalysis.h
dataflowAPI/src/: ABI.C  stackanalysis.C
dwarf/: CMakeLists.txt
dwarf/src/: dwarfExprParser.C  dwarfFrameParser.C  dwarfResult.C
dyninstAPI/src/: BPatch.C  BPatch_basicBlock.C  BPatch_flowGraph.C  BPatch_function.C  BPatch_instruction.C  BPatch_libInfo.h  BPatch_memoryAccessAdapter.h  BPatch_snippet.C  BPatch_templates.C  RegisterConversion.h  ast.h  baseTramp.h  codeRange.h  codegen-x86.C  codegen.C  debug.C  debug.h  emit-x86.C  frame.h  freebsd.h  function.h  image.h  infHeap.h  inst.h  instPoint.h  linux-aarch64.h  linux-power.h  linux-x86.C  linux.h  mapped_module.h  mapped_object.h  ntDL.h  os.h  parRegion.h  parse-aarch64.C  parse-cfg.h  parse-power.C  parse-x86.C  pcEventHandler.h  pcEventMuxer.h  (+7 more)
dyninstAPI_RT/h/: dyninstAPI_RT.h
dyninstAPI_RT/src/: RTheap-win.c
elf/: CMakeLists.txt
elf/h/: Elf_X.h
elf/src/: Elf_X.C
elf_on_windows/: README.txt
elf_on_windows/patches/: build.bat
elf_on_windows/patches/VC/: CMakeLists.txt  config.h
instructionAPI/src/: Instruction.C  InstructionDecoder-x86.C  Operation.C
parseAPI/src/: IA_IAPI.C  InstructionAdapter.C  SymLiteCodeSource.C  SymtabCodeSource.C  util.h
patchAPI/src/: AddrSpace.C  PointMaker.C
proccontrol/src/: int_thread_db.C  mmapalloc.C  procset.C  sysv.C  unix.C
stackwalk/src/: dbginfo-stepper.C  freebsd-swk.h  freebsd-x86-swk.C  linux-swk.h  linux-x86-swk.C  linuxbsd-swk.h  linuxbsd-x86-swk.C  (+1 more)
symtabAPI/: CMakeLists.txt
(+29 files in other folders)
